# groovy-rentals

./: .flake8  .gitignore  .nvmrc  README.md  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
api/: admin.py
app/: app.js  router.js
assets/: chunk.143.06137d2e7ca6d0f3c0a1.js  chunk.143.06137d2e7ca6d0f3c0a1.map  chunk.143.0ed2e015e2e1e9377bf9.js  chunk.143.2cec2ff8307f20b07a60.js  chunk.143.2cec2ff8307f20b07a60.map  chunk.143.3dffc9230418dc8cb086.js  chunk.143.4a6c4b81812718e18cee.js  chunk.143.4cd1074589a4d2b16c4e.js  chunk.143.4cd1074589a4d2b16c4e.map  chunk.143.8190c07a0393ed2de972.js  chunk.143.8190c07a0393ed2de972.map  chunk.143.90bd037633b009eaf9e4.js  chunk.143.90bd037633b009eaf9e4.map  chunk.143.99538f184794dc433716.js  chunk.143.99538f184794dc433716.map  chunk.143.bb670b3c5141bf5c45cc.js  chunk.143.bb670b3c5141bf5c45cc.map  chunk.143.cc660514ef111ef0c04e.js  chunk.143.cc660514ef111ef0c04e.map  chunk.143.d5ba39750a752d7db1b5.js  chunk.143.d5ba39750a752d7db1b5.map  chunk.143.e04677349b6bec12d438.js  chunk.143.e04677349b6bec12d438.map  chunk.143.e2f59c7c3eaf4e76ff8b.js  chunk.143.e2f59c7c3eaf4e76ff8b.map  chunk.178.140bb1f75a9dc4396db0.js  chunk.178.30f147dfd6e968ebe202.js  chunk.178.30f147dfd6e968ebe202.map  chunk.178.313c43478c3ab27b7d86.js  chunk.178.313c43478c3ab27b7d86.map  (+63 more)
backend/: .dockerignore  .env  .gitignore  Dockerfile  README.md  initial-data.json  pyproject.toml
backend/api/models/: __init__.py  rental.py
backend/api/serializers/: rental.py
backend/api/tests/factories/: location.py  rental.py
backend/api/tests/models/: __init__.py  rental_tests.py
backend/api/views/: rental.py
backend/project/: settings.py  urls.py
(+60 files in other folders)
